// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebarCategory sidebar call hideSidebar 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="0"
      data-rbd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="octo-sidebar-title category-title"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="SidebarBoardItem subitem "
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="SidebarBoardItem subitem "
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar call hideSidebar 2`] = `
<div>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="0"
      data-rbd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="octo-sidebar-title category-title"
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="SidebarBoardItem subitem "
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rbd-hidden-text-0-hidden-text-0"
              class="SidebarBoardItem subitem "
              data-rbd-drag-handle-context-id="0"
              data-rbd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar collapsed with active board in it 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="2"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="2"
      data-rbd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category collapsed "
          >
            <div
              aria-describedby="rbd-hidden-text-2-hidden-text-12"
              class="octo-sidebar-title category-title"
              data-rbd-drag-handle-context-id="2"
              data-rbd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="2"
            data-rbd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rbd-hidden-text-2-hidden-text-12"
              class="SidebarBoardItem subitem active"
              data-rbd-drag-handle-context-id="2"
              data-rbd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="SidebarBoardItem sidebar-view-item active"
            >
              <svg
                class="BoardIcon Icon"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.8"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
              <div
                class="octo-sidebar-title"
                title="view title"
              >
                view title
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar collapsed without active board 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="1"
      data-rbd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category collapsed "
          >
            <div
              aria-describedby="rbd-hidden-text-1-hidden-text-6"
              class="octo-sidebar-title category-title"
              data-rbd-drag-handle-context-id="1"
              data-rbd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar template close other 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="4"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="4"
      data-rbd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rbd-droppable-context-id="4"
          data-rbd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rbd-hidden-text-4-hidden-text-25"
              class="octo-sidebar-title category-title"
              data-rbd-drag-handle-context-id="4"
              data-rbd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="4"
            data-rbd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rbd-hidden-text-4-hidden-text-25"
              class="SidebarBoardItem subitem "
              data-rbd-drag-handle-context-id="4"
              data-rbd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="4"
            data-rbd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rbd-hidden-text-4-hidden-text-25"
              class="SidebarBoardItem subitem active"
              data-rbd-drag-handle-context-id="4"
              data-rbd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="SidebarBoardItem sidebar-view-item active"
            >
              <svg
                class="BoardIcon Icon"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.8"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
              <div
                class="octo-sidebar-title"
                title="view title"
              >
                view title
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar template close self 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="3"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="3"
      data-rbd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rbd-droppable-context-id="3"
          data-rbd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rbd-hidden-text-3-hidden-text-19"
              class="octo-sidebar-title category-title"
              data-rbd-drag-handle-context-id="3"
              data-rbd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rbd-hidden-text-3-hidden-text-19"
              class="SidebarBoardItem subitem active"
              data-rbd-drag-handle-context-id="3"
              data-rbd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="SidebarBoardItem sidebar-view-item active"
            >
              <svg
                class="BoardIcon Icon"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.8"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
              <div
                class="octo-sidebar-title"
                title="view title"
              >
                view title
              </div>
            </div>
          </div>
          <div
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rbd-hidden-text-3-hidden-text-19"
              class="SidebarBoardItem subitem "
              data-rbd-drag-handle-context-id="3"
              data-rbd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
